--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "ajv": "8.12.0",
+    "ajv-keywords": "5.1.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.3",
@@ -20,14 +22,13 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "2.4.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.29.0",
     "react-scripts": "^5.0.1",
     "recharts": "^2.15.1",
     "tailwindcss": "^4.0.6",
-    "web-vitals": "^2.1.4",
-    "proxy": "http://localhost:5000"
-
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
