--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
     "body-parser": "^1.20.2",
     "config": "^3.3.12",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.18.2",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
