Changed for second review

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "short_name": "RTO Portal",
-    "name": "RTO Portal Application",
+    "short_name": "GRS",
+    "name": "Grievance Redressal System",
     "icons": [
         {
             "src": "favicon.ico",
