--- a/server/package.json
+++ b/server/package.json
@@ -21,11 +21,11 @@
   },
   "name": "server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "check-escalations": "node scripts/checkEscalations.js"
   },
   "keywords": [],
