--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,8 @@
     "node-cron": "^3.0.3",
     "react-chat-engine": "^1.11.28",
     "socket.io": "^4.8.1",
-    "stream-chat": "^8.57.6"
+    "stream-chat": "^8.57.6",
+    "tesseract.js": "^6.0.1"
   },
   "name": "server",
   "version": "1.0.0",
