--- a/client/package.json
+++ b/client/package.json
@@ -1,42 +1,24 @@
 {
-  "name": "grs-timeline-client",
-  "version": "0.1.0",
+  "name": "grs-query-client",
+  "version": "1.0.0",
   "private": true,
-  "proxy": "http://localhost:5000",
   "dependencies": {
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
-    "@mui/material": "^6.1.6",
-    "@react-google-maps/api": "^2.20.6",
-    "@shadcn/ui": "^0.0.4",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.10",
+    "@mui/material": "^5.15.10",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "ajv": "8.12.0",
-    "ajv-keywords": "5.1.0",
-    "autoprefixer": "^10.4.20",
-    "axios": "^1.4.0",
-    "bootstrap": "^5.3.3",
-    "lucide-react": "^0.475.0",
-    "moment": "^2.30.1",
-    "mongodb": "^6.10.0",
-    "postcss": "^8.5.2",
+    "axios": "^1.6.7",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.10.9",
     "react-dom": "^18.2.0",
-    "react-hot-toast": "2.4.1",
-    "react-icons": "^5.3.0",
-    "react-router-dom": "^6.29.0",
-    "react-scripts": "^5.0.1",
-    "recharts": "^2.15.1",
-    "socket.io-client": "^4.8.1",
-    "stream-chat": "^8.57.6",
-    "stream-chat-react": "^12.13.1",
-    "tailwindcss": "^4.0.6",
+    "react-router-dom": "^6.22.1",
+    "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "set PORT=3000 && react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
