--- a/server/package.json
+++ b/server/package.json
@@ -1,40 +1,30 @@
 {
-  "dependencies": {
-    "@google/generative-ai": "^0.24.0",
-    "bcrypt": "^5.1.0",
-    "bcryptjs": "^3.0.2",
-    "body-parser": "^1.20.2",
-    "config": "^3.3.12",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "express-validator": "^7.2.1",
-    "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.10.0",
-    "mongoose": "^7.4.1",
-    "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
-    "node-cron": "^3.0.3",
-    "pdfjs-dist": "^5.1.91",
-    "react-chat-engine": "^1.11.28",
-    "socket.io": "^4.8.1",
-    "stream-chat": "^8.57.6",
-    "tesseract.js": "^6.0.1"
-  },
-  "name": "server",
+  "name": "grs-query-server",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Smart Query Assistant for Grievance Redressal System",
+  "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "check-escalations": "node scripts/checkEscalations.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "dependencies": {
+    "@google/generative-ai": "^0.24.0",
+    "@xenova/transformers": "^2.15.0",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.1",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.1.1",
+    "multer": "^1.4.5-lts.2",
+    "node-cron": "^3.0.3",
+    "socket.io": "^4.7.4",
+    "stream-chat": "^8.59.0"
+  },
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.0.3"
   }
 }
