--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,19 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
+    "bootstrap": "^5.3.5",
+    "lucide-react": "^0.488.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
+    "recharts": "^2.15.2",
+    "stream-chat": "^8.59.0",
+    "stream-chat-react": "^12.14.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
