--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "recharts": "^2.15.2",
+    "sentence-transformers": "^2.2.2",
     "stream-chat": "^8.59.0",
     "stream-chat-react": "^12.14.0",
     "web-vitals": "^2.1.4"
