--- a/server/.env
+++ b/server/.env
@@ -4,3 +4,6 @@ JWT_SECRET=grs-timeline-secure-jwt-secret-key-2024
 NODE_ENV=development
 JWT_EXPIRY=24h
 GEMINI_API_KEY=AIzaSyA_xvAtjnsQ3w9jfEzual1p1RBvpeqpZoM
+HADOOP_NAMENODE=hadoop-master:9000
+HADOOP_USER=hadoopuser
+HADOOP_WEBHDFS_URL=http://hadoop-master:50070/webhdfs/v1
