--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
 PORT=5001
-MONGODB_URI=mongodb://localhost:27017/grievance_portal
+MONGODB_URI=mongodb+srv://joshnaacsha:Wonder!24@cluster0.widgd4c.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 SESSION_SECRET=your-secret-key
 NODE_ENV=development
