--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 PORT=5000
-MONGODB_URI=mongodb://localhost:27017/grievance_portal
+MONGODB_URI=mongodb+srv://joshnaacsha:Wonder!24@cluster0.widgd4c.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=grs-timeline-secure-jwt-secret-key-2024
 NODE_ENV=development
 JWT_EXPIRY=24h
